--- a/index.html
+++ b/index.html
@@ -1,15 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- Latest compiled and minified CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
     <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
+   <main id="main">
+    <section id="tribute-intro">
+      <h2>Dr. Norman Borlaug</h2>
+      <p>The man who saved a billion lives</p>
+      <figure id="img-box">
+        <img
+        id="image"
+        src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg"
+        alt="Dr. Norman Borlaug seen standing in Mexican wheat field with a group of biologists"
+      />
+      <figcaption id=""img-details>
+        Dr. Norman Borlaug, third from the left, trains biologists in Mexico
+        on how to increase wheat yields - part of his life-long war on hunger.
+      </figcaption>
+      </figure>
+    </section>
+    <section id="tribute-info">
+      <h3 id="headline">Here's a time line of Dr. Borlaug's life:</h3>
+      <ul id="list-events"></ul>
+    </section>
+    <blockquote
+    cite="http://news.rediff.com/report/2009/sep/14/pm-pays-tribute-to-father-of-green-revolution-borlaug.htm"
+  >
+    <p>
+      "Borlaug's life and achievement are testimony to the far-reaching
+      contribution that one man's towering intellect, persistence and
+      scientific vision can make to human peace and progress."
+    </p>
+    <cite>-- Indian Prime Minister Manmohan Singh</cite>
+  </blockquote>
+   </main>
+   <footer>
+      <p>This site is made by Nasreen & Victor</p>
+   </footer>
 
-    Hello World!
-    <script  src="js/index.js"></script>
+    <script src="js/index.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
