--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <title>Fork Me! FCC: Test Suite Template</title>
-    <!-- Latest compiled and minified CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Norican&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" />
+    
   </head>
 
   <body>
     <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
-   <main id="main">
-    <section id="tribute-intro">
-      <h2>Dr. Norman Borlaug</h2>
+   <main id="main" class="m-3 py-3 d-flex flex-column  justify-content-center">
+    <section id="tribute-intro" class="text-center text-white ">
+      <h2 class="doctor">Dr. Norman Borlaug</h2>
       <p>The man who saved a billion lives</p>
       <figure id="img-box">
         <img
@@ -23,33 +23,42 @@
         src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg"
         alt="Dr. Norman Borlaug seen standing in Mexican wheat field with a group of biologists"
       />
-      <figcaption id=""img-details>
+      <figcaption id="img-details" class="py-4 text-white fs-5">
         Dr. Norman Borlaug, third from the left, trains biologists in Mexico
         on how to increase wheat yields - part of his life-long war on hunger.
       </figcaption>
       </figure>
     </section>
-    <section id="tribute-info">
+    <section id="tribute-info" class="text-white text-center mx-auto d-flex p-3 flex-column justify-content-center">
       <h3 id="headline">Here's a time line of Dr. Borlaug's life:</h3>
       <ul id="list-events"></ul>
     </section>
     <blockquote
     cite="http://news.rediff.com/report/2009/sep/14/pm-pays-tribute-to-father-of-green-revolution-borlaug.htm"
   >
-    <p>
+    <p class="text-white text-center mx-auto w-75">
       "Borlaug's life and achievement are testimony to the far-reaching
       contribution that one man's towering intellect, persistence and
-      scientific vision can make to human peace and progress."
+      scientific vision can make to human peace and progress." 
+       <cite class="text-white text-center">-- Indian Prime Minister Manmohan Singh</cite>
     </p>
-    <cite>-- Indian Prime Minister Manmohan Singh</cite>
+  
   </blockquote>
    </main>
-   <footer>
+   <footer class=" text-center">
       <p>This site is made by Nasreen & Victor</p>
    </footer>
 
-    <script src="js/index.js"></script>
+    <script  src="js/index.js"></script>
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+    <!-- <script type="module">
+      import {data} from './js/index'
+let ul = document.getElementById('list-events') 
+console.log('here',ul)
+console.log(data)
+{/* <li><strong>1914</strong> - Born in Cresco, Iowa</li> */}
+let listItems = data.map((el)=> `<li key={${el.id}}><strong>${el.year}</strong> ${el.events}</li>`)
+ul.appendChild(listItems) 
+    </script> -->
   </body>
 </html>
