--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </blockquote>
    </main>
    <footer class=" text-center">
-      <p>This site is made by Nasreen & Victor</p>
+      <p>This site is made by <strong>Nasreen & Victor</strong> </p>
    </footer>
 
     <script  src="js/index.js"></script>
